--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,17 @@ http {
         listen 80;
         server_name localhost;
 
+        # Redirect HTTP to HTTPS
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/certs/server.crt;
+        ssl_certificate_key /etc/nginx/certs/server.key;
+
         # Configuration for the regular public access page
         location / {
             root /var/www/public;
