--- a/nginx.conf
+++ b/nginx.conf
@@ -4,16 +4,27 @@ events {
 
 http {
     server {
-        listen 80;
-        server_name localhost;
+        listen 80 default_server; # Listen on the default IP address
 
-        # Redirect HTTP to HTTPS
-        return 301 https://$host$request_uri;
+        # Configuration for the regular public access page
+        location / {
+            root /var/www/public;
+            index index.html;
+        }
+
+        # Configuration for the page with basic authentication
+        location /protected {
+            alias /var/www/protected;
+            index index.html;
+
+            auth_basic "Restricted Access";
+            auth_basic_user_file /etc/nginx/.htpasswd; # Path to your htpasswd file
+        }
     }
 
     server {
-        listen 443 ssl;
-        server_name localhost;
+        listen 443 ssl default_server; # Listen on the default IP address with SSL
+        server_name _;
 
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
