--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,25 @@
 events {
-  worker_connections  1024; 
+    worker_connections 768;
 }
 
 http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    server_tokens off; # Hide NGINX version number
+
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+
     server {
         listen 80 default_server; # Listen on the default IP address
-
-        # Configuration for the regular public access page
-        location / {
-            root /var/www/public;
-            index index.html;
-        }
-
-        # Configuration for the page with basic authentication
-        location /protected {
-            alias /var/www/protected;
-            index index.html;
-
-            auth_basic "Restricted Access";
-            auth_basic_user_file /etc/nginx/.htpasswd; # Path to your htpasswd file
-        }
+        return 301 https://$host$request_uri;
     }
 
     server {
@@ -43,5 +43,19 @@ http {
             auth_basic "Restricted Access";
             auth_basic_user_file /etc/nginx/.htpasswd; # Path to your htpasswd file
         }
+
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+
+        # Allows only GET requests in this server 
+        if ($request_method !~ ^(GET|HEAD|POST)$) {
+            return 405;  # Return Method Not Allowed for other HTTP methods
+        }
+
+        # Limit Request Size (adjust as needed)
+        client_max_body_size 10m;
+
+        # Limiting the size of an XML Body (adjust as needed)
+        client_body_buffer_size 128k;
     }
 }
