--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+load_module /etc/nginx/modules/ngx_http_modsecurity_module.so;
+
 events {
     worker_connections 768;
 }
@@ -16,6 +18,10 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
+
+    modsecurity on;
+    modsecurity_rules_file /etc/nginx/modsec/main.conf;
+
 
     server {
         listen 80 default_server; # Listen on the default IP address
