--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
-load_module /etc/nginx/modules/ngx_http_modsecurity_module.so;
+# load_module /etc/nginx/modules/ngx_http_modsecurity_module.so;
+pid /tmp/nginx.pid;
 
 events {
     worker_connections 768;
@@ -19,17 +20,17 @@ http {
 
     access_log /var/log/nginx/access.log main;
 
-    modsecurity on;
-    modsecurity_rules_file /etc/nginx/modsec/main.conf;
+    # modsecurity on;
+    # modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
 
     server {
-        listen 80 default_server; # Listen on the default IP address
+        listen 8080 default_server; # Listen on the default IP address
         return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443 ssl default_server; # Listen on the default IP address with SSL
+        listen 4443 ssl default_server; # Listen on the default IP address with SSL
         server_name _;
 
         ssl_certificate /etc/nginx/certs/server.crt;
@@ -47,7 +48,7 @@ http {
             index index.html;
 
             auth_basic "Restricted Access";
-            auth_basic_user_file /etc/nginx/.htpasswd; # Path to your htpasswd file
+            auth_basic_user_file /etc/nginx/.htpasswd;
         }
 
         add_header X-Frame-Options "SAMEORIGIN";
