Readded the ModSec. Everything's fine!

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# load_module /etc/nginx/modules/ngx_http_modsecurity_module.so;
+load_module /etc/nginx/modules/ngx_http_modsecurity_module.so;
 pid /tmp/nginx.pid;
 
 events {
@@ -20,8 +20,8 @@ http {
 
     access_log /var/log/nginx/access.log main;
 
-    # modsecurity on;
-    # modsecurity_rules_file /etc/nginx/modsec/main.conf;
+    modsecurity on;
+    modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
 
     server {
