--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,14 @@ services:
       - "80:8080"
       - "443:4443"
       - "2222:22"
+    cap_drop:
+      - all
+    cap_add:
+      - chown
+      - dac_override
+      - setgid
+      - setuid
+      - net_bind_service
     # read_only: true
     security_opt:
       - "apparmor=unconfined"  # AppArmor profile
