--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - net_bind_service
     # read_only: true
     security_opt:
-      - "apparmor=unconfined"  # AppArmor profile
+      # - "seccomp=./seccomp-profile.json"
       - "no-new-privileges:true"  # Prevent privilege escalation
     deploy:
       resources:
